# deser-hjson

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bacon.toml
benches/: parse.rs
src/: de.rs  de_enum.rs  de_map.rs  de_number.rs  de_seq.rs  error.rs  lib.rs  utf8.rs
src/test/: mod.rs  test_derived.rs
tests/: array.rs  bad_format.rs  braceless.rs  crlf.rs  enum.rs  guess.rs  mix.rs  multiline.rs  multiline_strings.rs  objects.rs  quoteless-key.rs  quoteless-numberlike.rs  reader.rs  serde-error.rs  spacing.rs  strings.rs  trailing_chars.rs  trim_quoteless.rs
tests/common/: mod.rs
