[package]
name = "deser-hjson"
version = "0.1.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/deser-hjson"
description = "a Hjson deserializer for Serde"
edition = "2018"
keywords = ["hjson", "deserialization", "serde"]
license = "MIT"
categories = ["encoding"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
unescape = "0.1.0"
