[package]
name = "deser-hjson"
version = "1.0.2"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/deser-hjson"
description = "a Hjson deserializer for Serde"
edition = "2018"
keywords = ["hjson", "deserialization", "serde", "derive", "json"]
license = "MIT"
categories = ["encoding"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
glassbench = "0.3"

[[bench]]
name = "parse"
harness = false

[profile.bench]
lto = true

[profile.release]
lto = true
